--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
         <p>
           Open KaKao Talk vKSP Community<br />
           Soeayo<br />
-          Scope : www.~~~<br />
-          Git : www.~<br />
+          Scope : https://klaytnscope.com/account/0xbbc6ec1385b35156fd893d54c022ff88d3888148?tabId=contractCode<br />
+          Git : https://github.com/So-eayo/so-eayo.github.io<br />
         </p>
       </div>
     </section>
