--- a/index.html
+++ b/index.html
@@ -370,8 +370,17 @@
         <p>
           Open KaKao Talk vKSP Community<br />
           Soeayo<br />
-          Scope : https://klaytnscope.com/account/0xbbc6ec1385b35156fd893d54c022ff88d3888148?tabId=contractCode<br />
-          Git : https://github.com/So-eayo/so-eayo.github.io<br />
+          Scope :
+          <a
+            href="https://klaytnscope.com/account/0xbbc6ec1385b35156fd893d54c022ff88d3888148?tabId=contractCode"
+            target="_blank"
+            >https://klaytnscope.com/account/0xbbc6</a
+          ><br />
+          Git :
+          <a href="https://github.com/So-eayo/so-eayo.github.io" target="_blank"
+            >https://github.com/So-eayo</a
+          >
+          <br />
         </p>
       </div>
     </section>
