--- a/index.html
+++ b/index.html
@@ -263,6 +263,26 @@
         .red-text {
           color: red;
         }
+        .swal2-styled.swal2-confirm {
+          width: 75%;
+          height: 56px;
+          margin-top: 20px;
+          order: 0;
+          border-radius: 0.5em;
+          background-color: #3366ff;
+          color: #ffffff;
+          font-size: 0.8em;
+        }
+        .swal2-styled.swal2-cancel {
+          width: 75%;
+          height: 56px;
+          margin-top: 20px;
+          order: 0;
+          border-radius: 0.5em;
+          background-color: #fee500;
+          color: #ffffff;
+          font-size: 0.8em;
+        }
         @media screen and (max-width: 480px) {
           .custom-confirm {
             width: 300px; /* 원하는 너비로 조절하세요 */
@@ -277,6 +297,26 @@
             margin-right: 130px;
             margin-top: 50px;
           }
+        }
+        .swal2-styled.swal2-confirm {
+          width: 75%;
+          height: 56px;
+          margin-top: 20px;
+          order: 0;
+          border-radius: 0.5em;
+          background-color: #3366ff;
+          color: #ffffff;
+          font-size: 0.8em;
+        }
+        .swal2-styled.swal2-cancel {
+          width: 75%;
+          height: 56px;
+          margin-top: 20px;
+          order: 0;
+          border-radius: 0.5em;
+          background-color: #fee500;
+          color: #ffffff;
+          font-size: 0.8em;
         }
         @media screen and (max-width: 768px) {
           .custom-confirm {
@@ -311,7 +351,7 @@
 
         .swal2-styled.swal2-confirm {
           width: 75%;
-          height: 35%;
+          height: 56px;
           margin-top: 20px;
           order: 0;
           border-radius: 0.5em;
@@ -321,11 +361,11 @@
         }
         .swal2-styled.swal2-cancel {
           width: 75%;
-          height: 35%;
+          height: 56px;
           margin-top: 20px;
           order: 0;
           border-radius: 0.5em;
-          background-color: #474849;
+          background-color: #fee500;
           color: #ffffff;
           font-size: 0.8em;
         }
@@ -388,5 +428,10 @@
     <script type="text/javascript" src="../static/script.js"></script>
     <script type="text/javascript" src="../static/abi.js"></script>
     <script type="text/javascript" src="../static/kaikas.js"></script>
+    <script type="text/javascript" src="../static/klip.js"></script>
+    <script
+      type="text/javascript"
+      src="../static/web2app-standalone-1.1.1.min.js"
+    ></script>
   </body>
 </html>
